# ASX-Trading-Lab

./: .gitignore  AGENTS.md  README.md  STATUS.md  package-lock.json
database/: README.md
deploy/: README.md  install.sh
features/: 001-web-app-homelab-signal-platform.md  002-self-hosted-supabase-via-cloudflare-tunnel.md  003-github-pages-react-spa-shell.md  004-github-pages-ci-cd-deployment.md  005-supabase-cloud-project-setup.md  006-database-schema-v1-core.md  007-public-read-only-access-rls-and-views.md  008-configuration-and-secrets-management.md  009-python-jobs-runner-scaffold.md  010-daily-scheduler-midday-sydney.md  011-asx-symbol-universe-ingestion.md  012-free-price-data-provider-adapter-yahoo-finance.md  013-daily-price-ingestion-ohlcv-and-midday-snapshot.md  014-historical-backfill-seed-window.md  015-data-quality-and-observability.md  016-signal-engine-price-movement-tracker.md  017-signal-engine-volatility-spike-watcher.md  018-signal-engine-gap-up-down-detector-deferred.md  019-ui-overview-dashboard.md  020-ui-symbol-drilldown.md  021-asx-announcements-ingestion-html-scraper.md  022-news-reaction-analytics-1d.md  023-backtesting-engine-v1.md  024-strategy-pack-v1.md  025-ui-backtest-reporting.md  026-paper-trading-ledger-v1-eod.md  027-portfolio-performance-metrics.md  028-risk-rules-and-metrics-v1.md  029-ui-portfolio-and-risk-dashboard.md  030-cloudflare-tunnel-exposure-and-migration-runbook.md  031-price-data-fallback-provider-python-web-scraping.md  032-symbol-normalization-and-provider-mapping.md  033-local-developer-workflow-and-environment.md  034-ci-quality-gates-frontend-and-jobs-runner.md  035-runbooks-and-operator-documentation-pack.md  (+8 more)
jobs/: .env.example  README.md  pyproject.toml
jobs/src/asx_jobs/: __init__.py  cli.py  config.py  database.py  logging.py  observability.py  orchestrator.py
jobs/src/asx_jobs/backtest/: __init__.py  engine.py  strategy.py
jobs/src/asx_jobs/jobs/: __init__.py  base.py  compute_reactions.py  ingest_announcements.py  ingest_prices.py  ingest_symbols.py
jobs/src/asx_jobs/paper/: __init__.py  engine.py  executor.py  metrics.py  risk.py
jobs/src/asx_jobs/providers/: __init__.py  base.py  scraping.py  yahoo.py
jobs/src/asx_jobs/signals/: __init__.py  price_movement.py  volatility.py
jobs/src/asx_jobs/strategies/: __init__.py  breakout.py  mean_reversion.py
jobs/src/asx_jobs/utils/: __init__.py
jobs/tests/: __init__.py  conftest.py  test_portfolio_metrics.py  test_price_signals.py  test_volatility_signals.py
(+89 files in other folders)
