[project]
name = "asx-trading-lab-jobs"
version = "0.1.0"
description = "ASX Trading Lab - Data ingestion and analytics jobs runner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "supabase>=2.0.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
asx-jobs = "asx_jobs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asx_jobs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
disallow_any_generics = false

# Supabase returns loosely-typed JSON; these modules handle it at runtime
[[tool.mypy.overrides]]
module = [
    "asx_jobs.database",
    "asx_jobs.observability",
    "asx_jobs.jobs.compute_reactions",
]
disable_error_code = ["index", "arg-type", "call-overload", "assignment", "union-attr", "operator"]

# Missing type stubs for third-party libs
[[tool.mypy.overrides]]
module = [
    "yfinance",
    "yfinance.*",
    "requests",
    "bs4",
    "bs4.*",
]
ignore_missing_imports = true
